<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.FragmentFrontpage"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo_final_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/summit_inline_regular"
        android:text="@string/motto"
        android:textSize="30sp"
        android:textAlignment="center"
        android:ellipsize="end"
        android:shadowColor="#55000000"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnGoToLogin"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"

            android:background="@drawable/login_button"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:finalCornerAngle="50dp"
            app:initialCornerAngle="35dp"
            app:spinning_bar_color="#73DAFF"
            app:spinning_bar_padding="0dp"
            app:spinning_bar_width="7dp" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnGoToRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"

            android:background="@drawable/login_button"

            android:fontFamily="@font/montserrat_regular"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:finalCornerAngle="50dp"
            app:initialCornerAngle="35dp"

            app:spinning_bar_color="#73DAFF"
            app:spinning_bar_padding="0dp"
            app:spinning_bar_width="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/need_assistance"
            android:ellipsize="end"
            android:shadowColor="#55000000"
            android:shadowDx="6"
            android:shadowDy="6"
            android:shadowRadius="6"
            android:textSize="23sp" />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnSos"
            android:layout_width="300dp"
            android:layout_height="70dp"

            android:background="@drawable/sos_button"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sos"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:finalCornerAngle="50dp"

            app:initialCornerAngle="35dp"
            app:spinning_bar_color="#73DAFF"
            app:spinning_bar_padding="0dp"
            app:spinning_bar_width="7dp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>