<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.FragmentRegister">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/logo_final_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:background="@drawable/bg_button"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="26dp"
                android:background="#00FF0000"
                android:drawableEnd="@drawable/ic_person"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center"
                android:hint="@string/first_name"
                android:inputType="textPersonName"

                android:textColorHint="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"


            android:background="@drawable/bg_button"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="26dp"
                android:background="#00FF0000"
                android:drawableEnd="@drawable/ic_person"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/bg_button"
            android:textColorHint="@color/white"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="26dp"
                android:background="#00FF0000"
                android:drawableEnd="@drawable/ic_mail"
                android:drawableRight="@drawable/ic_mail"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"

                android:textColorHint="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"


            android:background="@drawable/bg_button"
            android:textColorHint="@color/white"
            android:visibility="visible"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:background="#00FF0000"
                android:fontFamily="@font/montserrat_light"

                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:textColorHint="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="visible"
            app:finalCornerAngle="50dp"
            app:initialCornerAngle="35dp"
            app:spinning_bar_color="#73DAFF"
            app:spinning_bar_padding="0dp"
            app:spinning_bar_width="7dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/account_question"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <TextView
            android:id="@+id/btnGoToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="17sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>