<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/user_profile"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_pin"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:minHeight="64dp">

            <ImageView
                android:id="@+id/icon_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:padding="16dp"
                android:src="@drawable/ic_mail" />

            <TextView
                android:id="@+id/display_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icon_email"
                android:maxLines="1"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/email_address"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/mtrl_list_item_tint" />

            <TextView
                android:id="@+id/display_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/display_email"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@id/icon_email"
                android:maxLines="2"
                android:paddingEnd="16dp"
                android:text="@string/email_address"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/mtrl_list_item_tint" />

            <TextView
                android:id="@+id/change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:text="@string/change"
                android:textColor="@color/off_white" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="57dp"
            android:layout_marginEnd="42dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:minHeight="64dp">

            <ImageView
                android:id="@+id/icon_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:padding="16dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/display_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icon_first_name"
                android:maxLines="1"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/first_name"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/mtrl_list_item_tint" />

            <TextView
                android:id="@+id/display_first_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/display_first_name"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@id/icon_first_name"
                android:maxLines="2"
                android:paddingEnd="16dp"
                android:text="@string/first_name"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/mtrl_list_item_tint" />

            <TextView
                android:id="@+id/change_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:text="@string/change"
                android:textColor="@color/off_white" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="57dp"
            android:layout_marginEnd="42dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:minHeight="64dp">

            <ImageView
                android:id="@+id/icon_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:padding="16dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/display_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icon_last_name"
                android:maxLines="1"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/last_name"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/mtrl_list_item_tint" />

            <TextView
                android:id="@+id/display_last_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/display_last_name"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@id/icon_last_name"
                android:maxLines="2"
                android:paddingEnd="16dp"
                android:text="@string/last_name"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/mtrl_list_item_tint" />

            <TextView
                android:id="@+id/change_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:text="@string/change"
                android:textColor="@color/off_white" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="57dp"
            android:layout_marginEnd="42dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">


        <TextView
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/off_white"
            android:textSize="17sp" />

        <View
            android:id="@+id/view"
            android:layout_width="2dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="#7EFFFFFF" />

        <TextView
            android:id="@+id/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/off_white"
            android:textSize="17sp" />


    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:labelVisibilityMode="labeled"/>
</androidx.constraintlayout.widget.ConstraintLayout>